# neural-framework

./: README.md  pyproject.toml  requirements.txt  smoke_test.py
artifacts/: cat_detector_meta.json  cat_detector_weights.npz  titanic_meta.json  titanic_weights.npz
examples/: cat_detector.py  cat_model_utils.py  iris_classification.py  predict_cat.py  sine_regression.py  titanic_classification.py
miniflow/: __init__.py  activations.py  data.py  layers.py  losses.py  metrics.py  model.py  optimizers.py
miniflow/datasets/: __init__.py  images.py
